[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprite/workplace/sp_lollipop_shape.tres" type="SpriteFrames" id=1]
[ext_resource path="res://sprite/ui/sp_timer.tres" type="SpriteFrames" id=2]
[ext_resource path="res://objs/workplace/ob_lollipop_shape.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49.5, 16.5 )

[node name="ob_lollipop_shape" type="Node2D"]
script = ExtResource( 3 )

[node name="sp_work" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="sp_comp" type="AnimatedSprite" parent="sp_work"]
frames = ExtResource( 1 )
animation = "comp"
frame = 2
playing = true

[node name="sp_timer" type="AnimatedSprite" parent="sp_work"]
position = Vector2( 0, -37 )
z_index = 1000
z_as_relative = false
frames = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1.5, 13.5 )
shape = SubResource( 1 )
